syntax = "proto3";

package movies;

service MovieService{
    rpc getFavouriteMovies(MoviesRequest) returns (stream MovieResponse) {}
}

message MoviesRequest {
}

message MovieResponse {
    string movieType = 1;
    uint32 favouriteMovie = 2;
}